--- a/html/practice2.html
+++ b/html/practice2.html
@@ -7,6 +7,6 @@
         <p> Thank you for your wishes and love </p>
         <br>
         <p>love you</p>
-        <img src=thankyou.jpg">
+        <img src="thankyou.jpg">
     </body>
 </html>
